Release 1.6.0 Added README
Update write/read BooleanArray in SmartByteBuf

Refactoring
Optimize IdGenerator
Optimize PacketResponseWaiter
Replaced single reader worker threads with executor services in ShinnetaiIOWorker
Added WorkerOptions
Added ImmutablePacketRegistry
Split PacketRegistry into common and extended
Introduced Stream Registry and pipeline handler support
Added WrappedPacket with advanced options
Added sending packets to streams support
Added option for required empty response packet (to confirm packet handling on endpoint)